# intel_sys

./: .env.example  .gitignore  README.md  claude.md  pyproject.toml  start.sh  情报信息来源渠道.docx
.claude/skills/dev/: SKILL.md
app/: config.py  main.py  models.py
app/ai/: client.py
app/corroboration/: query_builder.py  service.py
app/defense/: converter.py  deduper.py  health.py  models.py  normalizer.py  rate_limiter.py  scorer.py  source_loader.py  storage.py
app/delivery/: base.py  feishu.py
app/engine/: context.py  registry.py  scheduler.py
app/memory/: pool.py
app/routes/: alerts.py  dashboard.py  debug.py
app/rules/: cls_ingest_rules.py  correlation_rules.py  defense_rules.py  github_rules.py  hackernews_rules.py  polymarket_digest.py  polymarket_rules.py  reddit_ingest_rules.py  xueqiu_ingest_rules.py
app/sources/: base.py  cls_news.py  github.py  hackernews.py  polymarket.py  reddit.py  twitter.py  xueqiu.py
docs/: defense-integration-plan.md  roadmap.md
prompts/correlation/: cross_event_reasoning.jinja2
prompts/defense/: translate.jinja2
prompts/github/: project_evaluation.jinja2  project_update.jinja2
prompts/hackernews/: topic_analysis.jinja2
prompts/memory/: event_compress.jinja2
prompts/polymarket/: anomaly_analysis.jinja2
sources/: defense_news.yaml
static/: console.html  filter.html  index.html  sources.html
static/assets/: theme.css
tests/defense_tasks/: conftest.py  test_m1_infra_and_models.py  test_m2_collection_and_loading.py  test_m3_pipeline_core.py  test_m4_storage_and_health.py  test_m5_rule_and_delivery.py
(+15 files in other folders)
