[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "intel-sys"
version = "0.1.0"
description = "Event-Driven Intelligence & Decision System"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "redis[hiredis]>=5.0.0",
    "apscheduler>=3.10.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
    "jinja2>=3.1.0",
    "py-clob-client>=0.1.0",
    "PyGithub>=2.0.0",
    "gtrending>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]
